kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: enterprise-devops-app
  namespace: enterprise-devops
  labels:
    app: enterprise-devops-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: enterprise-devops-app

  template:
    metadata:
      labels:
        app: enterprise-devops-app

    spec:
      containers:
        - name: enterprise-devops-app
          image: alskill/enterprise-devops-app:v1

          ports:
            - containerPort: 80
          resources:
              requests:
                cpu: "100m"
                memory: "128Mi"

              limits:
                cpu: "500m"
                memory: "512Mi"
