kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-devops-app

spec:
  type: NodePort

  selector:
    app: enterprise-devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30471
