kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: enterprise-devops-ingress
  namespace: enterprise-devops

spec:
  ingressClassName: nginx

  rules:
    - host: enterprise.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: enterprise-devops-app
                port:
                  number: 80
